<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.Login">

    <TextView
        android:id="@+id/tvEmailLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmailLog"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/etEmailLog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="e-mail"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_e_mail"/>

    <TextView
        android:id="@+id/tvPassLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/etEmailLog"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/etPassLog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_password"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:background="@drawable/btn_shape_round"
        android:textColor="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>