<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.view.Home">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/daily_inspiration"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/medium_electric_blue"
        app:layout_constraintBottom_toTopOf="@id/cvDaily"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDaily"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivDaily"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@drawable/are_you_looking_for_quick_and_easy_appetizer_recipes_"
            android:contentDescription="@string/daily_inspiration_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvDailyName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/maastricht_blue"
            android:gravity="center"
            android:textColor="@color/white"
            tools:text="dummy text" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="26sp"
        android:textColor="@color/medium_electric_blue"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvDaily"/>





</androidx.constraintlayout.widget.ConstraintLayout>